tests/conformance/negative/bad_constraint.afr
# MUST fail: constraint T is number rejects text
function onlyNumber<T>(x T) returns T where T is number
    return x
end
create bad = onlyNumber("x")
